Fixed spacing on about page

--- a/static/css/about.css
+++ b/static/css/about.css
@@ -52,7 +52,7 @@ body{
   height: 200px;
 }
 .box h1{
-  font-size: 40px;
+  font-size: 37px;
   letter-spacing: 4px;
   font-weight: 100;
 }
